# pyRedPocket

./: LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  python-package.yml
examples/: hash_example.py  simple_example.py
pyRedPocket/: __init__.py  client.py  details.py
pyRedPocket/tests/: test_details.py
pyredpocket/: __init__.py  client.py  details.py
pyredpocket/tests/: test_client.py  test_details.py
pyredpocket/tests/data/: get-other-lines.json  login.html
redpocket_monitor/: __init__.py  example.ini  monitor.py
redpocket_monitor/data/: data.csv
redpocket_monitor/scripts/: tools.py
src/pyredpocket/: details.py
src/pyredpocket/tests/: test_client.py
src/pyredpocket/tests/data/: get-details.json
tests/: test_client.py  test_details.py
tests/data/: get-details.json
