[metadata]
name = pyredpocket
author = Ronnie Llamado
author_email = llamado.ronnie@gmail.com
maintainer = Ronnie Llamado
maintainer_email = llamado.ronnie@gmail.com
version = attr: pyredpocket.__version__
description = Python Interface for RedPocket Mobile Data
url = https://github.com/ronnie-llamado/pyRedPocket
download_url = https://github.com/ronnie-llamado/pyRedPocket
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
packages = pyredpocket
install_requires = requests

[options.extras_require]
test =
    pytest

[flake8]
ignore = D203
exclude = .git,__pycache__,.venv
max-complexity = 10
per-file-ignores = pyredpocket/__init__.py:F401
