[metadata]
name = pyredpocket
version = attr: pyredpocket.__version__

author = Ronnie Llamado
author_email = llamado.ronnie@gmail.com

description = Python Interface for RedPocket Mobile Data
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ronnie-llamado/pyRedPocket
license = MIT
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = pyredpocket
python_requires = >= 3.6
install_requires = requests
tests_requires = 
    pytest
    flake8

[flake8]
ignore = D203
exclude = .git,__pycache__,.venv
max-complexity = 10
per-file-ignores = pyredpocket/__init__.py:F401
